--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ a[class] {
   --white: #fff;
   --main-color: #242121;
   --cyan: #00B2A0;
+  --Very-dark-cyan: #01353E;
   --firefly: #0D302C;
   --black: #000;
 }
@@ -77,7 +78,28 @@ body {
   max-width: 1230px;
   padding: 0 15px;
   margin: 0 auto;
-  
+}
+
+.title {
+  position: relative;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 56px;
+  text-transform: uppercase;
+  color: var(--Very-dark-cyan);
+  text-align: center;
+}
+
+.about .title::after {
+  content: '/';
+  width: 48px;
+  height: 85px;
+  font-size: 72px;
+  line-height: 85px;
+  color: var(--cyan); 
+  position: absolute;
+  top: 0;
 }
 
 /* Header */
@@ -86,16 +108,14 @@ body {
   min-height: 100vh;
   background: url(../images/bg.jpg) no-repeat #368189 center center;
   background-size: cover;
-  position: relative;
 }
 
 .header::before {
   content: '';
   min-height: 45.5%;
-  min-width: 100vw;
+  min-width: 100%;
   position: absolute;
   background: linear-gradient(180deg, #01353E 0%, rgba(51, 51, 51, 0.595076) 31.64%, rgba(51, 51, 51, 0.222586) 74.35%, rgba(51, 51, 51, 0) 99.87%);
-  
 }
 
 .header__top {
@@ -119,7 +139,6 @@ body {
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
-  letter-spacing: 0.6px;
   color: var(--white);
 }
 
@@ -146,7 +165,6 @@ body {
   font-size: 200px;
   line-height: 235px;
   text-transform: uppercase;
-  letter-spacing: 0.6px;
   color: var(--firefly);
 }
 
@@ -156,10 +174,30 @@ body {
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
-  letter-spacing: 0.6px;
   color: var(--black)
 }
 
 .header__icon-serf {
   margin-bottom:  92px;
+}
+
+/* About */
+
+.about {
+  padding: 189px 0 169px;
+}
+
+.about .title {
+  margin-bottom: 100px;
+}
+
+.about__inner {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.about__inner p {
+  max-width: 480px;
+  margin-bottom: 30px;
+  margin-right: 120px;
 }
