--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ a[class] {
 :root {
   --white: #fff;
   --light-gray: #F8F8F8;
+  --explosive-gray: #C4C4C4;
   --cyan: #00B2A0;
   --Very-dark-cyan: #01353E;
   --firefly: #0D302C;
@@ -331,6 +332,44 @@ body {
 
 /* Gallery */
 
+.gallery__title {
+  margin-bottom: 212px;
+}
+
+.gallery__filter {
+  margin-bottom: 50px;
+}
+
+.gallery__images {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 50px;
+}
+
+.gallery__item {
+  margin-right: 40px;
+}
+.gallery__item:nth-child(3n) {
+  margin-right: 0;
+}
+.gallery__item:nth-child(-n+3) {
+  margin-bottom: 40px;
+}
+
+.gallery__link-more {
+  display: block;
+  width: 350px;
+  height: 70px;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 70px;
+  text-transform: uppercase;
+  color: inherit;
+  border: 1px solid var(--explosive-gray);
+  margin: 0 auto 200px auto; 
+  text-align: center;
+}
+
 .gallery__statistics {
   display: flex;
   flex-flow: column wrap;
@@ -344,5 +383,7 @@ body {
 .gallery__statistics dd {
   margin-left: 100px;
 }
+
+
 
 
