--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ a[class] {
 
 /* Global */
 
- /* font-family: 'Raleway', sans-serif; */
+/* font-family: 'Raleway', sans-serif; */
 
 body {
   font-family: 'Roboto Condensed', sans-serif;
@@ -100,7 +100,7 @@ body {
   height: 85px;
   font-size: 72px;
   line-height: 85px;
-  color: var(--cyan); 
+  color: var(--cyan);
   position: absolute;
   top: 0;
 }
@@ -149,7 +149,7 @@ body {
   border-bottom: 1px solid var(--cyan);
 }
 
-.menu__list-item + .menu__list-item {
+.menu__list-item+.menu__list-item {
   margin-left: 45px;
 }
 
@@ -180,7 +180,7 @@ body {
 }
 
 .header__icon-serf {
-  margin-bottom:  92px;
+  margin-bottom: 92px;
 }
 
 /* About */
@@ -229,7 +229,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
- }
+}
 
 .school__feature-title::before {
   position: absolute;
@@ -245,9 +245,11 @@ body {
   left: 68px;
   background: url(../images/living-icon.svg);
 }
+
 .icon-flying::before {
   background: url(../images/flyght-icon.svg);
 }
+
 .icon-training::before {
   background: url(../images/training-icon.svg);
 }
@@ -285,20 +287,25 @@ body {
   background: url(../images/Wawe1.svg);
   width: 200px;
 }
+
 .info-item1 span {
   left: 210px;
 }
+
 .info-item2::before {
   background: url(../images/Wawe2.svg);
   width: 247px;
 }
+
 .info-item2 span {
   left: 257px;
 }
+
 .info-item3::before {
   background: url(../images/Wawe3.svg);
   width: 293px;
 }
+
 .info-item3 span {
   left: 303px;
 }
@@ -349,9 +356,11 @@ body {
 .gallery__item {
   margin-right: 40px;
 }
+
 .gallery__item:nth-child(3n) {
   margin-right: 0;
 }
+
 .gallery__item:nth-child(-n+3) {
   margin-bottom: 40px;
 }
@@ -366,8 +375,29 @@ body {
   text-transform: uppercase;
   color: inherit;
   border: 1px solid var(--explosive-gray);
-  margin: 0 auto 200px auto; 
+  margin: 0 auto 200px;
   text-align: center;
+}
+
+.blockquote {
+  position: relative;
+  background: var(--light-gray);
+  text-align: center;
+  margin-bottom: 200px;
+  padding: 80px 0 80px;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 40px;
+}
+
+.blockquote__author {
+  position: absolute;
+  left: 59%;
+  display: block;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 18px;
 }
 
 .gallery__statistics {
@@ -379,11 +409,17 @@ body {
   padding-right: 100px;
 }
 
+.gallery__video {
+  height: 600px;
+  margin-bottom: 200px;
+  background: url(../images/video-bg.jpg) #008787 no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .gallery__statistics dt,
 .gallery__statistics dd {
   margin-left: 100px;
 }
-
-
-
-
