--- a/css/style.css
+++ b/css/style.css
@@ -340,29 +340,58 @@ body {
 /* Gallery */
 
 .gallery__title {
-  margin-bottom: 212px;
+  margin-bottom: 217px;
 }
 
 .gallery__filter {
-  margin-bottom: 50px;
+  margin-bottom: 46px;
+}
+
+.gallery__btn {
+  background: transparent;
+  border: none;
+  font-size: 24px;
+  font-weight: 400;
+  color: inherit;
+  text-transform: uppercase;
+  padding: 0;
+  margin-right: 19px;
+  letter-spacing: inherit;
+}
+.mixitup-control-active {
+  color:var(--cyan)
 }
 
 .gallery__images {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
 }
 
 .gallery__item {
   margin-right: 40px;
+  margin-bottom: 40px;
+  position: relative;
+}
+
+ .gallery__item-link {
+  position: absolute;
+  cursor: pointer;
+  background: rgba(51, 51, 51, 0.7);
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0;
+  transition: .5s;
+}
+
+.gallery__item-link:hover {
+  opacity: 1;
 }
 
 .gallery__item:nth-child(3n) {
   margin-right: 0;
-}
-
-.gallery__item:nth-child(-n+3) {
-  margin-bottom: 40px;
 }
 
 .gallery__link-more {
